# ajapopaja-build

./: .gitignore  CONTRIBUTING.md  Dockerfile  GEMINI.md  GETTING_STARTED.md  LICENSE_COMPLIANCE.md  NVIM_SETUP.md  README.md  SECURITY.md  ajapopaja-build.service  deploy-local.sh  docker-build.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: conftest.py  pyproject.toml  pytest.ini
backend/api/: pyproject.toml
backend/api/src/api/: auth.py  gemini_executor.py  main.py  seed_user.py  vibe_executor.py  websocket_manager.py
backend/api/src/api/assistant/: decorators.py  manager.py  session.py  tool_registry.py  tools.py  ws_handler.py
backend/api/src/api/assistant/tools/: __init__.py  file_tools.py  git_tools.py  nvim_tools.py  pipeline_tools.py  search_tools.py  task_tools.py
backend/api/src/api/routes/: auth.py  pipeline.py  system.py  task.py
backend/core/: pyproject.toml
backend/core/src/core/: __init__.py  config.py  db.py  exceptions.py
backend/core/src/core/models/: models.py
backend/core/src/core/queries/: pipeline.py  task.py
backend/core/src/core/utils/: path_utils.py
backend/mcp/: pyproject.toml
backend/mcp/src/ajapopaja_mcp/: server.py
backend/tests/: test_assistant_session.py  test_assistant_tools.py  test_gemini_executor.py  test_git_tools.py  test_grep_integration_real.py  test_mcp_server.py  test_models.py  test_nvim_tools.py  test_paging.py  test_proposed_state.py  test_search.py  test_search_tools.py  test_stats.py  test_task_ordering.py  test_task_tools_validation.py  test_tool_registry.py  test_vibe_executor.py  test_websocket.py  test_workflow.py  test_workspace_security.py
design/: dd_architecture.md  dd_backend_api.md  dd_dialog_common.md  dd_project_setup.md  dd_spa_architecture.md  dd_user_authentication.md
design/implemented/: dd_markdown_design_doc.md  dd_mcp_api_autonomous.md  dd_pipeline_detail_view_improvements.md  dd_realtime_ui_updates_mcp.md  dd_search_tools.md  dd_workflow_state_machine.md
design/proposed/: dd_granular_task_updates.md  dd_granular_time_tracking.md  dd_license_compliance.md  dd_non_interruptive_ui_updates.md  dd_pipeline_processing_logic.md  dd_testing_subprocess_tools.md  dd_websocket_client_ids.md  spec_workflow.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: counter.ts  main.ts  style.css
frontend/src/core/: ActionRegistry.test.ts  ActionRegistry.ts  AppContext.ts  AssistantService.ts  AuthService.ts  Navigator.test.ts  Navigator.ts  WebSocketClient.ts  domain.ts  (+1 more)
(+34 files in other folders)
