[project]
name = "api"
version = "0.1.0"
description = "Ajapopaja Build FastAPI API"
authors = []
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "core",
    "websockets>=16.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "ollama>=0.6.1",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
core = { workspace = true }
