[project]
name = "core"
version = "0.1.0"
description = "Ajapopaja Build Core Shared Library"
authors = []
dependencies = [
    "beanie==2.1.0",
    "pymongo>=4.9.0",
    "pydantic>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
