[project]
name = "ajapopaja-mcp"
version = "0.1.0"
description = "Ajapopaja Build MCP Server"
authors = []
dependencies = [
    "mcp[cli]>=1.3.0",
    "core",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
core = { workspace = true }
